--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
 	<title>AngularJS Hello World</title>
 	<script src="bower_components/angular/angular.min.js"></script>
-	<script src="app.js"></script>
+	<script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
+	<script src="bower_components/angular-resource/angular-resource.min.js"></script>
+	<script src="bower_components/angular-route/angular-route.min.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/controllers.js"></script>
+	<script src="js/services.js"></script>
 </head>
 
 <body>
