Created Routes and Controllers and have a message displaying on index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+	<ul>
+		<li><a href="/">Home</a></li>
+		<li><a href="show">Show</a></li>
+	</ul>
 	<div data-ng-view></div>
 </body>	
 </html>
