--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
 	<ul>
-		<li><a href="/">Home</a></li>
-		<li><a href="show">Show</a></li>
+		<li><a href="#/">Home</a></li>
+		<li><a href="#show">Show</a></li>
 	</ul>
 	<div data-ng-view></div>
 </body>	
